objects/Account_Duplicate_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Dormant_Dup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dormant Duplicate</label>
        <referenceTo>Account_Dormant__c</referenceTo>
        <relationshipLabel>Account Duplicate Junctions</relationshipLabel>
        <relationshipName>Account_Duplicate_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Dup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dup</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Duplicate_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Extension_Dup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension Dup</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Account Duplicate Junctions (Account Dormant)</relationshipLabel>
        <relationshipName>Account_Duplicate_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Master__c</fullName>
        <label>Account Master</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Duplicate Junctions (Account Master)</relationshipLabel>
        <relationshipName>Account_Duplicate_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Autonum__c</fullName>
        <displayFormat>D{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Dup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Dup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Duplicate_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dup_Account_Type__c</fullName>
        <formula>Account_Extension_Dup__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dup Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dup_Cust_ID__c</fullName>
        <formula>BLANKVALUE(BLANKVALUE(BLANKVALUE(Account_Dup__r.AOPS_Seq_ID__c , Account_Dup__r.AOPS_Cust_Id__c  ), Account_Dup__r.OMX_Primary_Key__c ) , BLANKVALUE(BLANKVALUE(Account_Dormant_Dup__r.AccountExtension__r.AOPS_Seq_ID__c,Account_Dormant_Dup__r.AccountExtension__r.AOPS_Cust_Id__c),Account_Dormant_Dup__r.AccountExtension__r.OMX_Primary_Key__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dup Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Full_Address__c</fullName>
        <formula>Account_Extension_Dup__r.Address1__c + &quot; &quot; + Account_Extension_Dup__r.Address2__c + &quot; &quot; + Account_Extension_Dup__r.City__c + &quot; , &quot; +   text(Account_Extension_Dup__r.State__c) + &quot; &quot; +  Account_Extension_Dup__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Reason__c</fullName>
        <label>Duplicate Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_Type__c</fullName>
        <label>Duplicate Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicates_Reasons__c</fullName>
        <label>Duplicates Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SALES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Dup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Dup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Duplicate_Junctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multiple_Reps__c</fullName>
        <formula>IF( BLANKVALUE(  Account_Dup__r.Owner.OD_Employee_ID__c , Account_Dormant_Dup__r.AccountExtension__r.Account_Owner_ID__r.OD_Employee_ID__c  ) != Account_Master__r.Owner.OD_Employee_ID__c  , true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiple Reps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Original Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_Id__c</fullName>
        <formula>Account_Dup__r.Related_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_On_Duplicate__c</fullName>
        <formula>Account_Extension_Dup__r.Account_Owner__r.FirstName + &quot; &quot; + Account_Extension_Dup__r.Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep On Duplicate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_on_Master_Record__c</fullName>
        <formula>Account_Master__r.Account_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep on Master Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>log__c</fullName>
        <label>log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account Duplicate Junction</label>
    <nameField>
        <label>Duplicate Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Duplicate Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>